--- a/yoted.css
+++ b/yoted.css
@@ -1,9 +1,9 @@
 body {
-    background-color: turquoise;
+    background-color: lightseagreen;
 }
 
 h1 {
-    color: blue;
+    color: ghostwhite;
     margin-left: 20px;
 }
 
